[package]
name = "async-duplex-channel"
version = "0.1.0"
edition = "2024"
authors = ["malyjacob926@gmail.com"]
description = "An asynchronous duplex communication channel between multiple clients and a single responder in different asynchronous blocks."
license = "MIT"              # 许可证
repository = "https://github.com/malyjacob/async-duplex-channel"
keywords = ["async", "channel", "duplex", "tokio", "concurrency"]
categories = ["asynchronous", "concurrency"]

[dependencies]
futures = { version = "0.3.31", features = ["unstable"] }
sharded-slab = "0.1.7"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
